# Forgotten-Person

./: .gitignore  CMakeCache.txt  CMakeLists.txt  b.bat  r.bat  rb.bat
src/: Player.h  calculations.cpp  calculations.h  gameTile.cpp  gameTile.h  main.cpp
src/MapEditor/: editor.cpp  guiManager.h  shape.h
